[package]
name = "httpdebugger_keygen"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
eframe = "0.19.0"
rand = "0.8.5"
winreg = "0.10.1"
winsafe = { version = "0.0.11", features = ["kernel"] }

[profile.release]
opt-level = "s"
lto = true
codegen-units = 1
strip = true
